--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       securityJsCode: '84d340c2adef7ea9ce563597a65345f8',
     }
   </script>
-  <script type="text/javascript" src="https://webapi.amap.com/maps?v=2.0&key=030cbc61ee84d83987fa27dd1f8c5ec7"></script>
+  <!-- <script type="text/javascript" src="https://webapi.amap.com/maps?v=2.0&key=030cbc61ee84d83987fa27dd1f8c5ec7"></script> -->
 
   <!-- <script type="text/javascript"
     src="https://webapi.amap.com/maps?v=1.4.13&key=fbff9579feb79019f7a46f22c18ec16f"></script> -->
